# print3d-api

./: .env.example  .gitignore  BUSINESS_PLAN.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  MEMORY.md  PLAN_NUEVO_FLUJO.md  Procfile  README.md  README_WEB.md  SKILLS.md  __init__.py  agent_service.py.corrupted  clean_agent_service.py  cli.py  config.py  crypto_arcade_canvas.html  crypto_art_canvas.html  final_pipeline.py  fixed_mesh_generator.py  generate_crypto_art.py  generate_crypto_diner_warhol.py  generate_crypto_laundromat.py  generate_crypto_vending.py  generate_pixel_warhol_cycle.py  image_gen.py  install_triposr.py  local_mesh_gen.py  mesh_gen.py  mesh_utils.py  moltbook_3d_printing_skill.md  nixpacks.toml  pipeline.py  pipeline_local.py  premium_agent_service.py  print_api.py  prompt_engineer.py  pyproject.toml  railway.json  real_triposr.py  (+15 more)
docs/: DEVLOG.md  SKILL.md
examples/: basic_pipeline.py
web/: __init__.py  api.py  app.py  database.py  emails.py  job_service.py  materials.py  mesh_options.py  mesh_scaler.py  orders.py  payments.py  pricing.py  regional_pricing.py  shapeways_orders.py  sizes.py
web/static/: admin.html
web/templates/: index.html
