[project]
name = "print3d"
version = "0.1.0"
description = "Automated 2D → 3D → Print pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "httpx>=0.25.0",
    "huggingface-hub>=1.3.5",
    "omegaconf>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "trimesh>=4.11.1",
    # Web API dependencies
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "stripe>=7.0.0",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
mesh = [
    "trimesh>=4.0.0",
    "numpy>=1.24.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
all = [
    "print3d[dev,mesh,cli]",
]

[project.scripts]
print3d = "print3d.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["print3d"]
